--- a/scss/components/_product-card.scss
+++ b/scss/components/_product-card.scss
@@ -43,6 +43,7 @@
 	}
 
 	&__content {
+		position: relative;
 		text-align: center;
 		font-weight: bold;
 		transition: transform 0.3s ease 0s;
